# ccgo

./: .gitignore  CMakeLists.txt  TODO.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  card.cpp  card.h  cardbase.cpp  cardbase.h  cardbase_p.h  class.cpp  class.h  config.cpp  config.h  deck.cpp  deck.h  edition.cpp  edition.h  game.cpp  game.h  icardbasebackend.h  main.cpp  pictureloader.cpp  pictureloader.h  pictureloader_p.h  resources.qrc
src/core/gui/: cardbaseproxymodel.cpp  cardbaseproxymodel.h  cardview.cpp  cardview.h  createsetdialog.cpp  createsetdialog.h  createsetdialog.ui  deckmodel.cpp  deckmodel.h  deckmodel_p.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  manacostdelegate.cpp  manacostdelegate.h
src/core/iohandlers/: idatabaseiohandler.h  simplexmlhandler.cpp  simplexmlhandler.h  simplexmliohandler.cpp  simplexmliohandler.h  spoileriohandler.cpp  spoileriohandler.h  xmlhandler.cpp  xmlhandler.h  xmliohandler.cpp  xmliohandler.h
src/games/magic/: CardView.qml  MtGMain.qml  PhaseButton.qml  PhaseView.qml
